--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functions",
+  "name": "music-slider-api",
   "scripts": {
     "lint": "eslint src --ext .ts,.json --cache",
     "build": "tsc",
@@ -15,8 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "express": "^4.18.1",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "googleapis": "^105.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
