--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "types": ["@types/node"],
+  "rootDir": "./src",
+  "baseUrl": "./src",
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitReturns": true,
@@ -7,7 +9,9 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "compileOnSave": true,
   "include": ["src/**/*"]
