--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.2.1",
     "firebase-functions-test": "^0.2.0",
+    "node-plantuml": "^0.9.0",
     "typescript": "^4.5.4"
   },
   "private": true
